# RLottieTest

./: .gitignore  Cargo.toml  README.md  meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml  rotate.webm
data/animations/: stonks.json
po/: meson.build
src/: application.rs  config.rs  lottie_animation.rs  main.rs  meson.build  window.rs  window.ui
