[package]
name = "rlottietest"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"] }
rlottie = "0.5.0"

[dependencies.adw]
package = "libadwaita"
version  = "0.1.1"

# [profile.dev]
# opt-level = 3
# lto = true