[package]
name = "rlottietest"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"] }
# gtk-rlottie = { git = "https://github.com/YuraIz/gtk-rlottie-rs" }
# # rlottie = "0.5.0"
rlottie = { git = "https://github.com/melix99/telegram-rlottie-rs" }
flate2 = "1.0.24"

[dependencies.adw]
package = "libadwaita"
version  = "0.1.1"

# [profile.dev]
# opt-level = 3
# lto = true